--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,14 @@ asttokens==2.4.1
 astunparse==1.6.3
 async-lru==2.0.4
 attrs==23.1.0
+autoreject==0.4.3
 Babel==2.14.0
 beautifulsoup4==4.12.2
 bleach==6.1.0
 cachetools==5.3.2
 certifi==2023.11.17
 cffi==1.16.0
+cftime==1.6.3
 charset-normalizer==3.3.2
 comm==0.2.0
 contourpy==1.2.0
@@ -32,6 +34,7 @@ google-auth==2.25.2
 google-auth-oauthlib==1.2.0
 google-pasta==0.2.0
 grpcio==1.60.0
+h5io==0.2.0
 h5py==3.10.0
 idna==3.6
 importlib-metadata==7.0.0
@@ -70,10 +73,12 @@ matplotlib-inline==0.1.6
 mistune==3.0.2
 ml-dtypes==0.2.0
 mne==1.6.0
+mne-connectivity==0.6.0
 nbclient==0.9.0
 nbconvert==7.12.0
 nbformat==5.9.2
 nest-asyncio==1.5.8
+netCDF4==1.6.5
 notebook==7.0.6
 notebook-shim==0.2.3
 numpy==1.26.2
@@ -98,6 +103,7 @@ pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycparser==2.21
 pygments==2.17.2
+pymatreader==0.0.32
 pyparsing==3.1.1
 python-dateutil==2.8.2
 python-json-logger==2.0.7
@@ -115,6 +121,7 @@ rpds-py==0.14.1
 rsa==4.9
 scikit-learn==1.3.2
 scipy==1.11.4
+seaborn==0.13.1
 Send2Trash==1.8.2
 six==1.16.0
 sklearn==0.0
@@ -146,4 +153,6 @@ websocket-client==1.7.0
 werkzeug==3.0.1
 widgetsnbextension==4.0.9
 wrapt==1.14.1
+xarray==2023.12.0
+xmltodict==0.13.0
 zipp==3.17.0
